assets/style.css
* {
  margin: 0%;
  padding: 0%;
  box-sizing: border-box;
}

:root {
  line-height: 1.4;
  font-size: clamp(40%, 62.5%, 70.25%);
  color-scheme: dark;
}

html {
  scrollbar-width: 0;
}

body {
  box-sizing: border-box;
  /* max-width: 2640px;   */
  margin: 0 auto;
  line-height: 2;
  font-size: 1.6rem;
  background: #040404;
  color: #eaeaea;
  font-family: "Inter", sans-serif;

  vertical-align: baseline;
  word-wrap: break-word;
}

.heading-primary {
  font-size: 2rem;
  font-weight: 300;
}

.heading-secondary {
  font-size: clamp(2rem, 2.5vw, 2.5rem);
}

.heading-senary {
  font-size: 1.6rem;
  /* text-transform: capitalize; */
}

.header-container {
  background: no-repeat top center / cover;
  background-attachment: fixed;
  background-image: linear-gradient(#040404e4, #040404d0), url(./img/hero.webp);
}

.margin-top-min {
  margin-top: 1.5rem;
}

p {  
  font-weight: 300;
}

:is(.paragraph, h4, h5, h6)::first-letter {
  text-transform: capitalize;
}

.detail {
  place-self: center;
}

.container {
  padding: 5% 2%;
}

.nav {
  position: sticky;
  top: 0;
  width: 100%;
  padding: 1rem;
  background-color: rgba(18, 18, 18, 0.137254902);
  -webkit-backdrop-filter: saturate(70%) blur(4px);
  backdrop-filter: saturate(70%) blur(4px);
  border-bottom: 0.1px solid #3a3a3a;
  z-index: 2;
}
  
h3,
h4 {
  line-height: calc(1ex / 0.38);
  margin: calc(1ex / 0.38) 0 !important;
}

p { 
  line-height: calc(1ex / 0.32);
  margin: calc(1ex / 0.32) 0 !important;
}

@media (min-width: 64em) {
  p {
    margin: calc(1ex / 0.32) 0.5rem !important;
  }
}

.profile-heading{
  margin: 0  !important;
}

.tagline {
  height: fit-content;
}

